membuat product API
