# docs/api-specs.json
@@ -1107,11 +1107,20 @@
                             "schema": {
                                 "type": "object",
                                 "properties": {
+                                    "category_id": {
+                                        "type": "integer"
+                                    },
                                     "name": {
                                         "type": "string"
                                     },
                                     "description": {
                                         "type": "string"
+                                    },
+                                    "price": {
+                                        "type": "integer"
+                                    },
+                                    "stock": {
+                                        "type": "integer"
                                     }
                                 }
                             }
