# internal/model/product_model.go
@@ -1,0 +1,37 @@
+package model
+
+type ProductResponse struct {
+	ID          uint64            `json:"id,omitempty"`
+	Category    CategoryResponse `json:"category,omitempty"`
+	Name        string            `json:"name,omitempty"`
+	Description string            `json:"description,omitempty"`
+	Price       int               `json:"price,omitempty"`
+	Stock       int               `json:"stock,omitempty"`
+	CreatedAt   string            `json:"created_at,omitempty"`
+	UpdatedAt   string            `json:"updated_at,omitempty"`
+}
+
+type CreateProductRequest struct {
+	CategoryId  uint64 `json:"category_id" validate:"required"`
+	Name        string `json:"name" validate:"required,max=100"`
+	Description string `json:"description" validate:"required"`
+	Price       int    `json:"price" validate:"required"`
+	Stock       int    `json:"stock" validate:"required"`
+}
+
+type GetProductRequest struct {
+	ID uint64 `json:"-" validate:"required"`
+}
+
+type UpdateProductRequest struct {
+	ID          uint64 `json:"-" validate:"required"`
+	CategoryId  uint64 `json:"category_id" validate:"required"`
+	Name        string `json:"name" validate:"required,max=100"`
+	Description string `json:"description" validate:"required"`
+	Price       int    `json:"price" validate:"required"`
+	Stock       int    `json:"stock" validate:"required"`
+}
+
+type DeleteProductRequest struct {
+	ID uint64 `json:"-" validate:"required"`
+}
